Fix the jumping and cursor problem

--- a/src/App.css
+++ b/src/App.css
@@ -10,21 +10,11 @@
     justify-content: space-between !important;
     margin: 0 1%;
 }
-  li.nav-item .nav-link span{
-    /* padding-right: 4px ; */
-    /* font-size: 12px; */
-  }
-  
 
-  .nav-link .svg-inline--fa{
-    /* font-size: 12px; */
-  }
 
   li.nav-item {
     padding-right: .7rem;
     padding-left: .7rem;
-      /* padding: 0 !important;
-      margin: 0 !important; */
   }
 
   #work{
