--- a/src/components/Homepage/Header/Header.css
+++ b/src/components/Homepage/Header/Header.css
@@ -11,3 +11,8 @@
     padding-right: 0px;
     padding-left: 0px;
 }
+
+
+.styles_typicalWrapper__1_Uvh::after {
+    content: "" !important;
+}
